--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://kit.fontawesome.com/5e201a3df8.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>Vite App</title>
 </head>
